Performance fix in debug.stratego.core: use BreakpointEvents to suspend a stratego-program instead of MethodEntry or MethodExit events. When MethodEntry or MethodExit events are enabled the JVM cannot inline method calls, making the overall execution time 10 to 100 times slower...
svn path=/spoofax-imp/trunk/org.strategoxt.imp.debug.stratego.core/; revision=21702